src/css/index.css
/* ... */
.slider{
    display: flex;
    animation: board-slider 4s infinite;
}

@keyframes board-slider {
 0%{
    transform: translateX(900px);
 }
 5%{
    transform: translateX(450px);
 }
 25%{
    transform: translateX(450px);
 }
 30%{
    transform: translateX(-0);
 }
 50%{
    transform: translateX(-0);
 }
 55%{
    transform: translateX(-450px);
 }
 75%{
    transform: translateX(-450px);
 }
 80%{
    transform: translateX(-900px);
 }
 100%{
    transform: translateX(-900px);
 }
    
}

.board-3d img{
    margin: 0 100px;
    min-width: 250px;
}

.board-3d{
    display: flex;
    position: relative;
    justify-content: center;
    align-items: center;
    padding: 20px;
    min-width: 300px;
    min-height: 300px;
    width: 300px;
    height: 300px;
    box-shadow: 0 0 5em 10px var(--color-violet);
    background: linear-gradient(180deg,#151515,rgba(0, 51, 102,0.7));
}

.board-3d::after{
    pointer-events: none;
    content: "";
    position: absolute;
    background: var(--color-violet);
    top: 70%;
    left: 0;
    width: 100%;
    height: 100%;
    transform: perspective(5em) rotateX(40deg) scale(1,0.35);
    filter: blur(5em);
    opacity: 0.7;
}


/* About section */



.section--about{
    background: var(--color-orange);
    height: 21vw;
    min-height: 180px;
    color: #000000;
    position: relative;
    display: flex;
    margin-top: 500px;

    align-items: center;
}

.section--about::before{
    content: "";
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    margin: auto;
    width: 100%;
    height: 100%;
    background-image: url(../images/bg-line.svg);
    background-repeat: no-repeat;
    background-position: top;
    background-size: 55%;
    transform: translateX(10%);
}

@media screen and (max-width:800px) {
    .section--about::before{
        background-size: 80%;
    }
}

.section--about h2{
    font-weight: 600;
    letter-spacing: -0.5vw;
    font-size: 7vw;
    padding-left: 5vw;
}

.img-frame{
    position: absolute;
    right: 10px;
    bottom: -20px;
    border: 10px solid rgba(255, 103, 0, 0.5);
    width: 30vw;
    height: 45vw;
    z-index: 11;
    transform: rotate(-15deg);
}

.frame2{
    right: 20px;
    bottom: -40px;
    z-index: 5;
    border: none;
    background: linear-gradient(180deg,#893700,#000);
}
.frame3{
    right: 30px;
    bottom: -60px;
    opacity: 0.5;
    z-index: 4;
    background: linear-gradient(180deg,#893700,#491d00);
    border: none;
    
}
.frame4{
    right: 40px;
    bottom: -80px;
    opacity: 0.3;
    z-index: 4;
    background: linear-gradient(180deg,#893700,#FF6700);
    border: none;

}



.author-img{
    position: absolute;
    bottom: -1px;
    width: 30vw;
    right: 0;
    z-index: 10;
}

@media screen and (max-width:800px) {
    .section--about{
        margin-top: 300px;
    }

    .author-img{
        width: 50vw;
        bottom: -20px;
    }

    .img-frame{
        right: 5px;
        bottom: -10px;
        width: 50vw;
        height: 75vw;
    }

    .frame2{
        right: 10px;
        bottom: -20px;
    }
    .frame3{
        right: 15px;
        bottom: -30px;
    }
    .frame4{
        right: 20px;
        bottom: -40px;
    }

    .section--about::before{
        display: none;
    }
}




/* Form section */

.section--form{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.section--form form{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.input{
    font-family: var(--font-poppins);
    width: 80vw;
    padding: 1rem;
    margin: 5px;
    background-color: #000000;
    color: var(--color-grey-font);
    border: 2px solid var(--color-violet);
    resize: none;
}

form .alert{
    font-family: var(--font-poppins);
    margin: 0.2rem;
    font-size: 1.4rem;
    color: red;
}

/* Change the white to any color */
input:-webkit-autofill,
input:-webkit-autofill:hover, 
input:-webkit-autofill:focus, 
input:-webkit-autofill:active{
    transition: "color 9999s ease-out, background-color 9999s ease-out";
    transition-delay: 9999s;
    -webkit-transition: "color 9999s ease-out, background-color 9999s ease-out";
    -webkit-transition-delay: 9999s;
}

/*Change text in autofill textbox*/
input:-webkit-autofill{
    -webkit-text-fill-color: var(--color-grey-font) !important;
}

.input:focus{
    outline: none;
}


/* Forms section--- Typewriter */

.typewriter-image-container{
    position: relative;
    width: 700px;
}


.typewriter-image-container::before{
    content: "SAY Hi";
    padding: 2rem;
    display: flex;
    justify-content: center;
    margin: 0;
    font-family: var(--font-mohave);
    color: var(--color-orange);
    font-size: 7rem;
    position: absolute;
    top: -55px;
    left: 200px;
    width: 35%;
    height: 150px;
    background-color: var(--color-orange);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-stroke-color: transparent;
    -webkit-text-stroke-width: calc(0.4em/16);
    transform-origin: bottom;
    background-color: var(--color-grey-font);
    transform: skewY(-15.5deg) rotateY(-5deg) rotateX(-40deg);
    box-shadow: -2px -10px 1em 5px var(--color-violet-light);
}

@media screen and (max-width:800px) {
    .typewriter-image-container{
        width: 340px;
    }
    .typewriter-image-container::before{
        content: "SAY Hi";
        padding: 1rem;
        display: flex;
        justify-content: center;
        margin: 0;
        font-size: 4rem;
        position: absolute;
        top: -70px;
        left: 110px;
        width: 35%;
        height: 120px;
        text-align: center;
    }
}

@media screen and (min-width:800px) {
    .section--form{
        flex-direction: row;
    }
    .input{
        width: 40vw;
    }
}
/* ... */

